test/lexerTest/fail/test8.ic
Tab, Tab, Tab
Single |
~Curly Fries~ || ~Regular Fries~
Does it take # signs?
How about an email@wellesley.edu/
What is 25% of 50%
?! Hablas Espanol !?
**Math is Fun** ! UntilYouGet2College
